# enterprise-agent-platform

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/chains/: advanced_chain.py  base_chain.py  chat_chain.py  markdown_chain.py
app/config/: settings.py
app/container/: container.py
app/handlers/: exception_handler.py
app/llm/: client.py  provider.py
app/middleware/: logging.py  request_context.py
app/models/: agent_state.py  api_response.py  chat_request.py  chat_response.py  persona.py  stream_response.py
app/parsers/: text_parser.py
app/processors/: base_processor.py  question_processor.py
app/prompts/: loader.py  manager.py  markdown.py  models.py  personas.py  registry.py
app/services/: llm_service.py  ollama_service.py
app/utils/: exceptions.py  logger.py  request_context.py  sse.py
tests/: test_async_chat.py  test_chain.py  test_chat.py  test_health.py  test_stream.py
tests/integration/: test_chat_pipeline.py
