[project]
name = "enterprise-agent-platform"
version = "0.1.0"
description = "Enterprise Agent Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-ollama",
    "httpx",
    "loguru",
    "python-dotenv",
    "pydantic",
    "pydantic-settings"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff"
]